<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.tensoriot.auth.AuthViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".auth.fragments.LoginFragment">

        <include
            android:id="@+id/layout_progress"
            layout="@layout/layout_progress"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:visibility="@{viewModel.loading?View.VISIBLE:View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/icLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp60"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/ic_launcher" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp20"
            android:layout_marginTop="@dimen/dp40"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="@dimen/dp8"
            app:boxCornerRadiusBottomStart="@dimen/dp8"
            app:boxCornerRadiusTopEnd="@dimen/dp8"
            app:boxCornerRadiusTopStart="@dimen/dp8"
            app:layout_constraintTop_toBottomOf="@+id/icLogin">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp20"
            android:layout_marginTop="@dimen/dp30"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="@dimen/dp8"
            app:boxCornerRadiusBottomStart="@dimen/dp8"
            app:boxCornerRadiusTopEnd="@dimen/dp8"
            app:boxCornerRadiusTopStart="@dimen/dp8"
            app:layout_constraintTop_toBottomOf="@+id/tilEmail">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:imeOptions="actionDone"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp20"
            android:layout_marginTop="@dimen/dp30"
            android:background="@drawable/btn_submit"
            android:gravity="center"
            android:padding="@dimen/dp12"
            android:text="@string/login"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/tilPassword" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvOr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp20"
            android:layout_marginTop="@dimen/dp30"
            android:gravity="center"
            android:text="@string/or"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin"
            app:textAllCaps="true" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp20"
            android:layout_marginTop="@dimen/dp30"
            android:background="@drawable/btn_submit"
            android:gravity="center"
            android:padding="@dimen/dp12"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/tvOr" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>